# solver_with_webcodecs

./: CMakeLists.txt  README.md  event.c  exports.cmake  filter_register.c  gpac.c  gpac_help.c  loader.js  properties.cpp  stats.c  stats.h
.github/workflows/: build-solver.yml
include/: config.h
include/gpac/: crypt_tools.h  filters.h  route.h
